<resources>
    <string name="app_name">EveryWhereTrip</string>
    <string name="unknow_error">未知错误</string>
    <string name="conn_error">连接错误</string>
    <string name="conn_timeout">连接超时</string>
    <string name="net_error">网络错误</string>
    <string name="parse_error">解析错误</string>
    <string name="net_unused">当前网络不可用</string>
    <string name="for_more_service">你好,为了获取更好的服务</string>
    <string name="login_app">请登录到处旅行</string>
    <string name="contry_code">+86</string>
    <string name="input_phone">请输入手机号码</string>
    <string name="send_verify">发送验证码</string>
    <string name="or">or</string>
    <string name="agree_protocol">登录或者注册即同意到处旅行协议</string>
    <string name="send_again">重新发送</string>
    <string name="input_verify">请输入验证码</string>
    <string name="wait_please">请稍后...</string>
    <string name="oauth_error">授权错误</string>
    <string name="login_success">登录成功</string>
    <string name="login_fail">登录失败</string>
    <string name="oauth_cancel">取消授权</string>
    <string name="get_verify_fail">获取验证码失败</string>
    <string name="verify_code">验证码</string>
    <string name="my_money">我的钱包</string>
    <string name="tv_myCoupon">我的卡券</string>
    <string name="tv_shoppingTrip">已购行程</string>
    <string name="tv_myCollect">我的收藏</string>
    <string name="custom">联系客服</string>
    <string name="tv_sugesst">意见反馈</string>
    <string name="edit">编辑</string>
    <string name="card">人关注</string>
    <string name="info">个人信息</string>
    <string name="gain">获取途径</string>
    <string name="head">头像</string>
    <string name="personalHead">个人头像</string>
    <string name="userName">用户昵称</string>
    <string name="sex">性别</string>
    <string name="maintain">保密</string>
    <string name="baimi">伴小米</string>
    <string name="sizhibuquan">四肢不全五体不勤</string>
    <string name="specific">个性签名</string>
    <string name="updatepsw">修改密码</string>
    <string name="bindPhone">绑定手机号</string>
    <string name="winddraw">退出登录</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="secret">秘密</string>
    <string name="cancel">取消</string>
    <string name="camera">拍照</string>
    <string name="photo">从手机相册选择</string>
    <string name="finish">完成</string>
    <string name="update_name">修改昵称</string>
    <string name="update_signature">修改签名</string>
    <string name="begin_experience">开始体验</string>
    <string name="care">我的关注</string>
    <string name="invite">邀请好友</string>
    <string name="preview">预览线路</string>
    <string name="collect">收藏</string>
    <string name="collected">已收藏</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="banmi_details">伴米详情</string>
    <string name="reviews">所有评论</string>
    <string name="trip_specialTopic">旅游专题</string>
    <string name="follow">我的关注</string>
</resources>
