<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ui.main.activity.PersonalInfoActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_42">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="@dimen/dp_17"
            android:layout_height="@dimen/dp_17"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_14"
            android:src="@drawable/back_black" />

        <TextView
            android:layout_width="@dimen/dp_64"
            android:layout_height="@dimen/dp_19"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dp_9"
            android:text="@string/info"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_16" />

    </android.support.v7.widget.Toolbar>

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_4"
        android:background="@drawable/gra_white_de" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dp_16"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginTop="@dimen/dp_15"
        android:text="@string/gain"
        android:textSize="@dimen/sp_12" />

    <LinearLayout
        android:id="@+id/ll_head"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_13"
        android:background="@color/c_FFFFFF"
        android:paddingLeft="@dimen/dp_14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/head"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="@dimen/dp_40"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_259"
            android:layout_marginRight="@dimen/dp_14"
            android:src="@drawable/f" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_ninkName"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:layout_gravity="center"
        android:background="@color/c_FFFFFF"
        android:paddingLeft="@dimen/dp_14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/userName"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_userName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_229"
            android:text="@string/baimi"
            android:textColor="@color/c_999999"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sex"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:layout_gravity="center"
        android:background="@color/c_FFFFFF"
        android:paddingLeft="@dimen/dp_14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/sex"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_sex"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_40"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_271"
            android:layout_marginRight="@dimen/dp_14"
            android:gravity="center"
            android:text="@string/maintain"
            android:textColor="@color/c_999999" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_signature"
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:layout_gravity="center"
        android:background="@color/c_FFFFFF"
        android:paddingLeft="@dimen/dp_14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_marginTop="@dimen/dp_18"
            android:text="@string/specific"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_14" />

        <TextView
            android:id="@+id/tv_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_158"
            android:text="@string/sizhibuquan"
            android:textColor="@color/c_999999"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_23"
        android:background="@color/c_FFFFFF"
        android:paddingLeft="@dimen/dp_14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_gravity="center"
            android:text="@string/updatepsw"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dp_355"
        android:layout_height="@dimen/dp_53"
        android:layout_gravity="center"
        android:background="@color/c_FFFFFF"
        android:paddingLeft="@dimen/dp_14">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_17"
            android:layout_gravity="center"
            android:text="@string/bindPhone"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <Button
        android:layout_width="@dimen/dp_330"
        android:layout_height="@dimen/dp_40"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_28"
        android:background="@drawable/bg_btn_fa6a13_r15"
        android:text="@string/winddraw"
        android:textColor="@color/c_FFFFFF"
        android:textSize="@dimen/sp_14" />
</LinearLayout>