<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="@dimen/dp_25"
        android:layout_height="@dimen/dp_25"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_35"
        android:src="@drawable/back_white" />

    <TextView
        android:id="@+id/tv_hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_back"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_13"
        android:text="@string/for_more_service"
        android:textColor="@color/c_FA6A13"
        android:textSize="@dimen/sp_16" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_hello"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_9"
        android:text="@string/login_app"
        android:textColor="@color/c_373737"
        android:textSize="@dimen/sp_27" />

    <LinearLayout
        android:id="@+id/ll_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_login"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_106"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/phone" />

        <TextView
            android:id="@+id/tv_coutry_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contry_code"
            android:textColor="@color/c_636363"
            android:textSize="@dimen/sp_14" />

        <ImageView
            android:layout_width="@dimen/dp_7"
            android:layout_height="@dimen/dp_5"
            android:layout_marginLeft="@dimen/dp_2"
            android:src="@drawable/select" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_16"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_phone"
            android:inputType="phone"
            android:textColorHint="@color/c_C8C8C8"
            android:textSize="@dimen/sp_16" />

        <Button
            android:id="@+id/btn_send_verify"
            android:layout_width="@dimen/dp_90"
            android:layout_height="@dimen/dp_30"
            android:background="@drawable/bg_btn_ea_r15"
            android:text="@string/send_verify"
            android:textColor="@color/c_FEFEFE"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:layout_below="@id/ll_container"
        android:layout_marginLeft="@dimen/dp_23"
        android:layout_marginRight="@dimen/dp_23"
        android:layout_marginTop="@dimen/dp_7"
        android:background="@color/c_FA6A13" />

    <LinearLayout
        android:id="@+id/ll_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_140"
        android:gravity="center_vertical">

        <View
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"
            android:background="@drawable/gra_d8_a9" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_5"
            android:text="@string/or"
            android:textColor="@color/c_A9A9A9"
            android:textSize="@dimen/sp_14" />

        <View
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_1"
            android:layout_marginLeft="@dimen/dp_5"
            android:background="@drawable/gra_a9_d8" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_oauth_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ll_or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp_6">

        <ImageView
            android:id="@+id/iv_wechat"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:src="@drawable/wechat" />

        <ImageView
            android:id="@+id/iv_qq"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@drawable/qq" />

        <ImageView
            android:id="@+id/iv_sina"
            android:layout_width="@dimen/dp_50"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_20"
            android:src="@drawable/sina" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_protocol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="@string/agree_protocol"
        android:textColor="@color/c_999"
        android:textSize="@dimen/sp_13" />

</RelativeLayout>