<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_110"
        app:cardCornerRadius="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/c_FFFFFF"
                android:gravity="center"
                android:text="@string/camera"
                android:textSize="@dimen/sp_14" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_1"
                android:background="@color/c_DEDEDE" />

            <TextView
                android:id="@+id/tv_photo"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/c_FFFFFF"
                android:gravity="center"
                android:text="@string/photo"
                android:textSize="@dimen/sp_14" />


        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:cardCornerRadius="@dimen/dp_8">

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/c_FFFFFF"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/c_FA6A13"
            android:textSize="@dimen/sp_14" />
    </android.support.v7.widget.CardView>
</LinearLayout>
