<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.fragment.MyFragment">

    <RelativeLayout
        android:id="@+id/rl_personalInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_headPhoto"
            android:layout_width="@dimen/dp_70"
            android:layout_height="@dimen/dp_70"
            android:layout_marginLeft="@dimen/dp_52"
            android:layout_marginTop="@dimen/dp_27"
            android:src="@drawable/f" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_30"
            android:layout_marginLeft="@dimen/dp_133"
            android:layout_marginTop="@dimen/dp_32"
            android:text="林小姐"
            android:textColor="@color/c_333333"
            android:textSize="@dimen/sp_22" />

        <TextView
            android:id="@+id/tv_write"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dp_14"
            android:layout_marginLeft="@dimen/dp_135"
            android:layout_marginTop="@dimen/dp_72"
            android:text="@string/sizhibuquan"
            android:textColor="@color/c_999999"
            android:textSize="@dimen/sp_12" />

        <ImageView
            android:layout_width="@dimen/dp_15"
            android:layout_height="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_279"
            android:layout_marginTop="@dimen/dp_100"
            android:src="@drawable/icon_me_bianji" />

        <TextView
            android:layout_width="@dimen/dp_30"
            android:layout_height="@dimen/dp_17"
            android:layout_marginLeft="@dimen/dp_299"
            android:layout_marginTop="@dimen/dp_100"
            android:text="编辑"
            android:textSize="@dimen/sp_14" />
    </RelativeLayout>

    <android.support.v7.widget.CardView
        android:layout_width="@dimen/dp_299"
        android:layout_height="@dimen/dp_122"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginRight="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_145"
        app:cardCornerRadius="@dimen/dp_5">

        <RelativeLayout
            android:layout_width="@dimen/dp_299"
            android:layout_height="@dimen/dp_122"
            android:background="@drawable/gra_dl_money">

            <TextView
                android:layout_width="@dimen/dp_58"
                android:layout_height="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_8"
                android:text="@string/my_money"
                android:textColor="@color/c_FFFFFF"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="@dimen/dp_70"
                android:layout_height="@dimen/dp_58"
                android:layout_marginLeft="@dimen/dp_101"
                android:layout_marginTop="@dimen/dp_29"
                android:gravity="center"
                android:text="99"
                android:textColor="@color/c_FFFFFF"
                android:textSize="@dimen/sp_48" />

            <TextView
                android:layout_width="@dimen/dp_14"
                android:layout_height="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_174"
                android:layout_marginTop="@dimen/dp_60"
                android:text="元"
                android:textColor="@color/c_FFFFFF"
                android:textSize="@dimen/sp_14" />

            <TextView
                android:layout_width="@dimen/dp_90"
                android:layout_height="@dimen/dp_17"
                android:layout_marginLeft="@dimen/dp_195"
                android:layout_marginRight="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_94"
                android:text="赢取奖金>>"
                android:textColor="@color/c_FFFFFF"
                android:textSize="@dimen/sp_14" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/cd_cardView"
        android:layout_width="@dimen/dp_299"
        android:layout_height="@dimen/dp_212"
        android:layout_marginLeft="@dimen/dp_30"
        android:layout_marginTop="@dimen/dp_286"
        app:cardCornerRadius="@dimen/dp_5">

        <RelativeLayout
            android:layout_width="@dimen/dp_299"
            android:layout_height="@dimen/dp_212">

            <ImageView
                android:id="@+id/iv_coupon"
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_11"
                android:layout_marginLeft="@dimen/dp_11"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/icon_me_kaquan" />

            <TextView
                android:id="@+id/tv_myCoupon"
                android:layout_width="@dimen/dp_58"
                android:layout_height="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_17"
                android:layout_toRightOf="@id/iv_coupon"
                android:text="@string/tv_myCoupon"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:layout_width="@dimen/dp_6"
                android:layout_height="@dimen/dp_11"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/right_dl" />

            <View
                android:id="@+id/divid"
                android:layout_width="@dimen/dp_268"
                android:layout_height="@dimen/dp_2"
                android:layout_below="@id/tv_myCoupon"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_18"
                android:background="@color/c_F0F0F0" />


            <ImageView
                android:id="@+id/iv_shopping"
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_11"
                android:layout_below="@id/divid"
                android:layout_marginLeft="@dimen/dp_11"
                android:layout_marginTop="@dimen/dp_19"
                android:src="@drawable/icon_me_yigou" />

            <TextView
                android:id="@+id/tv_shoppingTrip"
                android:layout_width="@dimen/dp_58"
                android:layout_height="@dimen/dp_17"
                android:layout_below="@id/divid"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_toRightOf="@id/iv_shopping"
                android:text="@string/tv_shoppingTrip"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:layout_width="@dimen/dp_6"
                android:layout_height="@dimen/dp_11"
                android:layout_alignParentRight="true"
                android:layout_below="@id/divid"
                android:layout_marginRight="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/right_dl" />

            <View
                android:id="@+id/divid2"
                android:layout_width="@dimen/dp_268"
                android:layout_height="@dimen/dp_2"
                android:layout_below="@id/tv_shoppingTrip"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_18"
                android:background="@color/c_F0F0F0" />

            <ImageView
                android:id="@+id/iv_collect"
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_11"
                android:layout_below="@id/divid2"
                android:layout_marginLeft="@dimen/dp_11"
                android:layout_marginTop="@dimen/dp_19"
                android:src="@drawable/icon_me_shoucang" />

            <TextView
                android:id="@+id/tv_myCollect"
                android:layout_width="@dimen/dp_58"
                android:layout_height="@dimen/dp_17"
                android:layout_below="@id/divid2"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_toRightOf="@id/iv_shopping"
                android:text="@string/tv_myCollect"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:layout_width="@dimen/dp_6"
                android:layout_height="@dimen/dp_11"
                android:layout_alignParentRight="true"
                android:layout_below="@id/divid2"
                android:layout_marginRight="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/right_dl" />

            <View
                android:id="@+id/divid3"
                android:layout_width="@dimen/dp_268"
                android:layout_height="@dimen/dp_2"
                android:layout_below="@id/tv_myCollect"
                android:layout_marginLeft="@dimen/dp_10"
                android:layout_marginTop="@dimen/dp_18"
                android:background="@color/c_F0F0F0" />

            <ImageView
                android:id="@+id/iv_yaoqing"
                android:layout_width="@dimen/dp_17"
                android:layout_height="@dimen/dp_11"
                android:layout_below="@id/divid3"
                android:layout_marginLeft="@dimen/dp_11"
                android:layout_marginTop="@dimen/dp_19"
                android:src="@drawable/icon_me_yaoqing" />

            <TextView
                android:id="@+id/tv_following"
                android:layout_width="@dimen/dp_58"
                android:layout_height="@dimen/dp_17"
                android:layout_below="@id/divid3"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_toRightOf="@id/iv_yaoqing"
                android:text="@string/follow"
                android:textColor="@color/c_333333"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:layout_width="@dimen/dp_6"
                android:layout_height="@dimen/dp_11"
                android:layout_alignParentRight="true"
                android:layout_below="@id/divid3"
                android:layout_marginRight="@dimen/dp_17"
                android:layout_marginTop="@dimen/dp_20"
                android:src="@drawable/right_dl" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dp_20"
        android:text="当前版本为3.1.2" />
</RelativeLayout>